--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-jwt",
-  "version": "1.2.1",
+  "version": "1.2.2-linagora",
   "description": "Passport authentication strategy using JSON Web Tokens",
   "main": "./lib",
   "scripts": {
